--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
         Welcome to Zero to Pro Level-4 CS Bootcamp Batch-15!
+        <br><img src="logo.png" alt="">
 </body>
 </html>
