--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
         Welcome to Zero to Pro Level-4 CS Bootcamp Batch-15!
-        <br><img src="download.jpg" alt="">
+        <br><img src="logo.jpg" alt="">
 </body>
 </html>
