--- a/a1/index.html
+++ b/a1/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Soe Thiha </title>
+    <title>Assigment-1</title>
 </head>
 <body>
-        Welcome to Zero to Pro Level-4 CS Bootcamp Batch-15!
-        <br><img src="logo.jpg" alt="">
-        <br> <a href="a1/index.html" target="_blank" rel="noopener noreferrer"> Assigment-1 </a>
+    <h1> Assigment-1 </h1>
+    This is Assigment -1
+    <br><img src="logo.png" alt="">
 </body>
 </html>
