--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,15 @@
 </head>
 <body>
         Welcome to Zero to Pro Level-4 CS Bootcamp Batch-15!
-        <br><img src="logo.jpg" alt="">
+        <br><img src="logo.jpg" alt="This is logo">
         <br> <a href="a1/index.html" target="_blank" rel="noopener noreferrer"> Assigment-1 </a>
+
+        <div style="background-color: skyblue">
+            <h1> Testing </h1>
+            <h2> This is H2 </h2>
+            <h3> This is H3 </h3>
+            <p> This is Paragraph </p>
+            <a href="https://www.google.com" title="Go to Google Page"> Google </a>
+        </div>
 </body>
 </html>
