--- a/index.html
+++ b/index.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+   <!--
+        This is comment for design concept!
+        Red color use for heading and something!
+   --> 
+
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Soe Thiha </title>
+    <script>
+            /* alert("Hello")
+             confirm("Are you Sure?")   */
+    </script>
+    <style>
+             body { 
+                    /*  color: rgb(212, 20, 20);    */
+                    background-color: beige;
+             }
+
+    </style>
 </head>
 <body>
-        Welcome to Zero to Pro Level-4 CS Bootcamp Batch-15!
+        <a href="index.html">HOME</a> |
+        <a href="about.html">ABOUT</a> |
+        <a href="contac.html">CONTACT</a>
+
+        <h1> Welcome to Zero to Pro Level-4 CS Bootcamp Batch-15! </h1> 
         <br><img src="logo.jpg" alt="This is logo">
         <br> <a href="a1/index.html" target="_blank" rel="noopener noreferrer"> Assigment-1 </a>
 
