--- a/about.html
+++ b/about.html
@@ -7,10 +7,12 @@
     <title>ABOUT</title>
 </head>
 <body>
-        <a href="index.html">HOME</a> |
-        <a href="about.html">ABOUT</a> |
-        <a href="contac.html">CONTACT</a>
+    <a href="index.html">HOME</a> |
+    <a href="about.html">ABOUT</a> |
+    <a href="contact.html">CONTACT</a>|
+    <a href="prj/services.html">SERVICES</a>|
+    <a href="prj/mypage/my.html">MY</a>
         <h1> This is about page </h1>
-        <img src="logo 1.png" alt="">
+        <img src="images/logo1.png" alt="">
 </body>
 </html>
