--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
 <body>
         <a href="index.html">HOME</a> |
         <a href="about.html">ABOUT</a> |
-        <a href="contac.html">CONTACT</a>
+        <a href="contact.html">CONTACT</a>|
+        <a href="prj/services.html">SERVICES</a>|
+        <a href="prj/mypage/my.html">MY</a>
 
         <h1> Welcome to Zero to Pro Level-4 CS Bootcamp Batch-15! </h1> 
-        <br><img src="logo.jpg" alt="This is logo">
+        <br><img src="images/logo.jpg" alt="This is logo">
         <br> <a href="a1/index.html" target="_blank" rel="noopener noreferrer"> Assigment-1 </a>
 
         <div style="background-color: skyblue">
