--- a/about.html
+++ b/about.html
@@ -13,6 +13,6 @@
     <a href="prj/services.html">SERVICES</a>|
     <a href="prj/mypage/my.html">MY</a>
         <h1> This is about page </h1>
-        <img src="images/logo1.png" alt="">
+        <img src="images/logo1.png" alt="This is logo">
 </body>
 </html>
