--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <a href="contact.html" target="_blank">CONTACT</a>|
         <a href="prj/services.html">SERVICES</a>|
         <a href="prj/mypage/my.html">MY</a>
+        <a href="myanmar/index.html">မြန်မာဘာသာ</a>
 
         <h1> Welcome to Zero to Pro Level-4 CS Bootcamp Batch-15! </h1> 
         <br><img src="images/logo.jpg" alt="This is logo">
@@ -42,5 +43,11 @@
             <p> This is Paragraph </p>
             <a href="https://www.google.com" title="Go to Google Page"> Google </a>
         </div>
+
+        <a href="https://www.youtube.com"> <img src="images/logo5.png" alt=""></a>
+
+        <br>
+        <a href="singlepage.html#contact"> Single Page Contact</a>
+        
 </body>
 </html>
