--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
         <a href="about.html" target="_blank">ABOUT</a> |
         <a href="contact.html" target="_blank">CONTACT</a>|
         <a href="prj/services.html">SERVICES</a>|
-        <a href="prj/mypage/my.html">MY</a>
-        <a href="myanmar/index.html">မြန်မာဘာသာ</a>
+        <a href="prj/mypage/my.html">MY</a>|
+        <a href="myanmar/index.html">မြန်မာဘာသာ</a>|
+        <a href="table.html">HTML Table</a>
 
         <h1> Welcome to Zero to Pro Level-4 CS Bootcamp Batch-15! </h1> 
-        <br><img src="images/logo.jpg" alt="This is logo">
+        <br><img src="images/logo.jpg" alt="This is logo" width="750px" height="650px" border="5px">
         <br> <a href="a1/index.html" target="_blank" rel="noopener noreferrer"> Assigment-1 </a>
 
         <div style="background-color: skyblue">
@@ -49,5 +50,45 @@
         <br>
         <a href="singlepage.html#contact"> Single Page Contact</a>
         
+        <h1>Order List</h1>
+        <ol type="A">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JS</li>
+            <li>C++</li>
+        </ol>
+
+        <h1>Unorder List</h1>
+        <ul type="circle">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JS</li>
+            <li>C++</li>
+        </ul>
+
+        <h1>Definition List</h1>
+        <dl>
+            <dt>HTML</dt>
+            <dd>HTML is hypertext markup language. </dd>
+        </dl>
+
+        <footer>
+                All right reserverd &reg by MMIT Consulting.
+                Copy right &copy;
+        </footer>
+<!-- သီးခြား ရပ်တည်-->
+        <div style="color: red;">
+                This is test division.
+                This is <span style="color: blue;">some text</span> in division.
+        </div> Last
+
+        P First <p>This is some apragraph </p> P Last
+
+        H First <h1> This is test heading</h1> H Last
+        <!-- တွဲပြီးရပ်တည် Inline Elements -->
+        Image First <img src="images/logo.jpg" alt="" width="40px" height="30px"> Last
+
+        
+
 </body>
 </html>
