--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         <a href="myanmar/index.html">မြန်မာဘာသာ</a>|
         <a href="table.html">HTML Table</a>|
         <a href="form.html">Form Elements</a>|
-        <a href="javascript/index.html">Javascript</a>
+        <a href="javascript/index.html">Javascript</a>|
+        <a href="shop/index.html">Shop</a>
 
         <h1> Welcome to Zero to Pro Level-4 CS Bootcamp Batch-15! </h1> 
         <br><img src="images/logo.jpg" alt="This is logo" width="750px" height="650px" border="5px">
