--- a/shop/products/phone/nothing.html
+++ b/shop/products/phone/nothing.html
@@ -9,6 +9,8 @@
 <body>
     <img src="../../logos/shoplogo.jpg" alt="This is logo" width="1650" height="500" border="2px">    <br>
 
+    <h1>Nothing Phone List</h1>
+
     <table border="1">
         <tr>
             <td><a href=""><img src="../phone images/nothingw.jpg" alt="" width="200" height="200"></a></td>
