--- a/shop/products/phone/apple.html
+++ b/shop/products/phone/apple.html
@@ -9,6 +9,7 @@
 <body>
     <img src="../../logos/shoplogo.jpg" alt="This is logo" width="1650" height="500" border="2px">    <br>
 
+    <h1>Apple Phone List</h1>
     <table border="1">
         <tr>
             <td><a href=""><img src="../phone images/iphone14.jpg" alt="" width="160" height="200"></a></td>
