--- a/shop/index.html
+++ b/shop/index.html
@@ -18,13 +18,13 @@
            <td> <a href="products/phone.html"><h1>Smart Phones</h1></a>  </td> 
         </tr>
     </table>
-
+    <br>
     <table border="1">
         <tr>
-            <td><a href=""><img src="logos/laptoplogo.jpg" alt="" width="200" height="200"></a></td>
+            <td><a href="products/laptop.html"><img src="logos/laptoplogo.jpg" alt="" width="200" height="200"></a></td>
         </tr>
         <tr>
-           <td> <a href=""><h1>Laptops</h1></a>  </td> 
+           <td> <a href="products/laptop.html"><h1>Laptops</h1></a>  </td> 
         </tr>
     </table>
 
