--- a/shop/contact.html
+++ b/shop/contact.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <img src="logos/shoplogo.jpg" alt="This is logo" width="1650" height="500" border="2px">    <br>
+    <a href="index.html">HOME</a>|
+    <a href="about.html">ABOUT</a>|
+    <a href="contact.html">CONTACT</a>
+    <br>
     <h1>Contact for Soe Mobile</h1>
 
     <p>Address-No.22, Baya Thokedi Street, Tarmwe, Yangon.</p><br>
