--- a/shop/products/phone/apple.html
+++ b/shop/products/phone/apple.html
@@ -8,8 +8,13 @@
 </head>
 <body>
     <img src="../../logos/shoplogo.jpg" alt="This is logo" width="1650" height="500" border="2px">    <br>
-
+    <a href="../../index.html">HOME</a>|
+    <a href="../../about.html">ABOUT</a>|
+    <a href="../../contact.html">CONTACT</a>
+    <br>
     <h1>Apple Phone List</h1>
+    <br>
+    <h2>i phone14 series</h2>
     <table border="1">
         <tr>
             <td><a href=""><img src="../phone images/iphone14.jpg" alt="" width="160" height="200"></a></td>
@@ -25,7 +30,8 @@
         </tr>
     </table>
     <br>
-
+    <br>
+    <h2>i phone13 series</h2>
     <table border="1">
         <tr>
             <td><a href=""><img src="../phone images/iphone13.jpg" alt="" width="160" height="200"></a></td>
@@ -41,7 +47,8 @@
         </tr>
     </table>
     <br>
-
+    <br>
+    <h2>i phone12 series</h2>
     <table border="1">
         <tr>
             <td><a href=""><img src="../phone images/iphone12.jpg" alt="" width="210" height="200"></a></td>
