--- a/shop/products/phone/nothing.html
+++ b/shop/products/phone/nothing.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <img src="../../logos/shoplogo.jpg" alt="This is logo" width="1650" height="500" border="2px">    <br>
-
+    <a href="../../index.html">HOME</a>|
+    <a href="../../about.html">ABOUT</a>|
+    <a href="../../contact.html">CONTACT</a>
+    <br>
     <h1>Nothing Phone List</h1>
 
     <table border="1">
