--- a/shop/products/phone/samsung.html
+++ b/shop/products/phone/samsung.html
@@ -8,8 +8,13 @@
 </head>
 <body>
     <img src="../../logos/shoplogo.jpg" alt="This is logo" width="1650" height="500" border="2px">    <br>
-
+    <a href="../../index.html">HOME</a>|
+    <a href="../../about.html">ABOUT</a>|
+    <a href="../../contact.html">CONTACT</a>
+    <br>
     <h1>Samsung Phone List</h1>
+    <br>
+    <h2>Z fold series</h2>
     <table border="1">
         <tr>
             <td><a href=""><img src="../phone images/samsungz1.jpg" alt="" width="220" height="240"></a></td>
@@ -25,7 +30,8 @@
         </tr>
     </table>
     <br>
-
+    <br>
+    <h2>Z flip series</h2>
     <table border="1">
         <tr>
             <td><a href=""><img src="../phone images/samsungf1.jpg" alt="" width="200" height="200"></a></td>
@@ -41,7 +47,8 @@
         </tr>
     </table>
     <br>
-
+    <br>
+    <h2>S series</h2>
     <table border="1">
         <tr>
             <td><a href=""><img src="../phone images/samsungs22.jpg" alt="" width="200" height="200"></a></td>
