--- a/shop/products/laptop.html
+++ b/shop/products/laptop.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <img src="../logos/shoplogo.jpg" alt="This is logo" width="1650" height="500" border="2px">    <br>
-
+    <a href="../index.html">HOME</a>|
+    <a href="../about.html">ABOUT</a>|
+    <a href="../contact.html">CONTACT</a>
+    <br>
     <table border="1">
         <tr>
             <td><a href="../products/laptop/mac.html"><img src="../logos/applelogo.jpg" alt="" width="200" height="200"></a></td>
