--- a/javascript/jsdatatypes.html
+++ b/javascript/jsdatatypes.html
@@ -21,10 +21,22 @@
                 var secondNumber=30;
                 var sum=firstNumber+secondNumber;
                 console.log(sum)
-                let firstName="Mg Mg";
-                let lastName="Aye Chan";
+                let firstName="Mg Mg"; // string data type
+                let lastName="Aye Chan"; // string data type
                 console.log(firstName,lastName);
-        </script>
+                // boolean data type (bool)
+                var single=true;
+                 var passed=false;
+                console.log("Type of Single: ", typeof(single));
+                console.log("Type of FirstNumber:" , typeof(firstNumber));
+                console.log("Type of firstName:" , typeof(firstName));
+                
+                    firstNumber=5.6;
+
+                    const studentName="Mg Mg" // constant variable
+                    studentName="Aung Aung" // Assignment Operator
+                 </script>
+
 
 </body>
 </html>
