--- a/javascript/shoppingcart2.html
+++ b/javascript/shoppingcart2.html
@@ -52,8 +52,17 @@
 
                      document.getElementById("mydata").innerHTML +=`
                      <tr><td colspan="4">Total</td> <td>${total}</tr>
-                    
                      `;
+                     if(total>=10000){
+                        let discount= total * 0.1 ;
+                        let grand_total=total-discount;
+                        document.getElementById("mydata").innerHTML +=`
+                     <tr><td colspan="4">Discount</td> <td>${discount}</tr>
+                     `;
+                     document.getElementById("mydata").innerHTML +=`
+                     <tr><td colspan="4">Grand Total</td> <td>${grand_total}</tr>
+                     `;
+                     }
 
                 }
 
