--- a/shop/index.html
+++ b/shop/index.html
@@ -11,7 +11,7 @@
     
 </head>
 <body>
-    <img src="logos/shoplogo.jpg" alt="This is logo" width="1650" height="500" border="2px">    <br>
+    <img src="logos/shoplogo.jpg" alt="This is logo" width="100%" height="500" border="2px">    <br>
 
     <a href="index.html">HOME</a>|
     <a href="about.html">ABOUT</a>|
