--- a/shop/contact.html
+++ b/shop/contact.html
@@ -7,7 +7,7 @@
     <title>Contact</title>
 </head>
 <body>
-    <img src="logos/shoplogo.jpg" alt="This is logo" width="1650" height="500" border="2px">    <br>
+    <img src="logos/shoplogo.jpg" alt="This is logo" width="100%" height="500" border="2px">    <br>
     <a href="index.html">HOME</a>|
     <a href="about.html">ABOUT</a>|
     <a href="contact.html">CONTACT</a>
